# PlanarTrainer

./: CMakeLists.txt  README.md  nexus6p.yaml  zenphone-ar.yaml
cmake/: FindYamlCpp05.cmake
src/: CVQtImage.cc  CVQtImage.h  CVQtScrollableImage.cc  CVQtScrollableImage.h  Calibration.hh  Dialogs.cc  Dialogs.h  ImageMeta.cc  ImageMeta.h  ImageWindow.cc  ImageWindow.hh  KeypointFlann.hh  display.cc  display.h  hull.cc  hull.h  json.cc  json.h  ocv.cc  ocv.h  output.cc  output.h  trainer.cc  typ.h  util.cc  util.h
src/pose/: GravityPose.hh  Optimization.cc  Optimization.h  OtherPose.hh  Polynomial.cc  Polynomial.h  Pose.hh  PoseRANSAC.cc  PoseRANSAC.hh  Ransac.hh  five_point_relative_pose.cc  five_point_relative_pose.h  math.hh  pose-other.cc  pose-other.h  pose2d.cc  pose2d.h  pose3d.cc  pose3d.h  poseocv.cc  poseocv.h  two_point_pose_partial_rotation.cc
